Add board random generator

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Project</title>
   </head>
-  <body></body>
+  <body>
+    <div class="screen">
+      <div class="container">
+        <h1 id="turn"></h1>
+        <div class="board" id="board1"></div>
+        <div class="board" id="board2"></div>
+      </div>
+    </div>
+    
+  </body>
 </html>
