--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>New Project</title>
   </head>
   <body>
-    <div class="screen">
+    <div class="screen game">
       <div class="container">
         <h1 id="turn"></h1>
         <div class="board" id="board1"></div>
