--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Project</title>
+    <title>BattleShip App</title>
   </head>
   <body>
     <div class="screen game">
       <div class="container">
-        <h1 id="turn"></h1>
+        <!-- <h1 id="turn"></h1>
         <div class="board" id="board1"></div>
-        <div class="board" id="board2"></div>
+        <div class="board" id="board2"></div> -->
       </div>
     </div>
   </body>
